[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/main_menu/inventory/inventory.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/panels/flat.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/ui/elements/item_box_detail.png" type="Texture" id=3]
[ext_resource path="res://ui/main_menu/inventory/item_grid.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/main_menu/inventory/selector.gd" type="Script" id=5]

[node name="inventory" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="item_name" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_top = 26.0
margin_right = 149.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Rect", "Theme", "custom_styles" ]

[node name="item_properties" type="Panel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 60.0
margin_right = 149.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Theme", "custom_styles" ]

[node name="item_description" type="Panel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 80.0
margin_right = 149.0
margin_bottom = 159.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Theme", "custom_styles" ]

[node name="item_icon" type="TextureRect" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 22.0
margin_right = 50.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0

[node name="item_grid" parent="." index="4" instance=ExtResource( 4 )]

_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="selector" type="TextureRect" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
script = ExtResource( 5 )
_sections_unfolded = [ "Mouse" ]
__meta__ = {
"_edit_lock_": true
}


